--- a/style.css
+++ b/style.css
@@ -1,321 +1,1 @@
-
-/*--------------------------------------------------------------
-# Basics
---------------------------------------------------------------*/
-body {
-	overflow-x: hidden;
-}
-html {
-	overflow-y: scroll;
-	overflow-x: hidden;
-}
-ul {
-	list-style: none;
-}
-textarea, input, a, button { 
-	outline: none;
-}
-
-/*--------------------------------------------------------------
-# Typography
---------------------------------------------------------------*/
-body {
-	font-family: 'Poppins', sans-serif;
-	font-size: 16px;
-	color: #fff;
-}
-h1, h2, h3, h4, h6 {
-	font-weight: 700;
-}
-a {
-	-webkit-transition: all 0.2s ease-in-out 0s;
-	-moz-transition: all 0.2s ease-in-out 0s;
-	-ms-transition: all 0.2s ease-in-out 0s;
-	-o-transition: all 0.2s ease-in-out 0s;
-	transition: all 0.2s ease-in-out 0s;
-}
-a:hover, a:visited, a:focus, a:active, button:hover, button:visited, button:active, button:focus; {
-	text-decoration: none !important;
-	outline: none !important;
-}
-::selection {
-	background: #000;
-	color: #fff;
-	text-shadow: none;
-}
-::-moz-selection {
-	background: #000;
-	color: #fff;
-	text-shadow: none;
-}
-
-/*--------------------------------------------------------------
-# Animations
---------------------------------------------------------------*/
-.animation-delay-100 {
-	-webkit-animation-delay: 0.1s;
-	animation-delay: 0.1s;
-}
-.animation-delay-200 {
-	-webkit-animation-delay: 0.2s;
-	animation-delay: 0.2s;
-}
-.animation-delay-300 {
-	-webkit-animation-delay: 0.3s;
-	animation-delay: 0.3s;
-}
-.animation-delay-400 {
-	-webkit-animation-delay: 0.4s;
-	animation-delay: 0.4s;
-}
-.animation-delay-600 {
-	-webkit-animation-delay: 0.6s;
-	animation-delay: 0.6s;
-}
-.animation-delay-800 {
-	-webkit-animation-delay: 0.8s;
-	animation-delay: 0.8s;
-}
-.animation-delay-1000 {
-	-webkit-animation-delay: 1s;
-	animation-delay: 1s;
-}
-.animation-delay-2000 {
-	-webkit-animation-delay: 2s;
-	animation-delay: 2s;
-}
-/*--------------------------------------------------------------
-# Video BG
---------------------------------------------------------------*/
-#videoBg {
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	min-width: 100%; 
-	min-height: 100%;
-	z-index: -20;
-}
-.overlay-pattern {
-    background: url('../img/overlay-pattern.png');
-    opacity: 0.5;
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    z-index: -10;
-    width: 100%;
-    height: 100%;
-	box-shadow: inset 0 0 300px 0 #c5f6ff;
-}
-.overlay {
-    -moz-animation: overlay .5s .5s forwards;
-    -webkit-animation: overlay .5s .5s forwards;
-    -ms-animation: overlay .5s .5s forwards;
-    animation: overlay .5s .5s forwards;
-    background-attachment: fixed, fixed;
-    background-image: url(../img/overlay-pattern2.png), url(../img/overlay.svg);
-    background-position: top left, center center;
-    background-repeat: repeat, no-repeat;
-    background-size: auto, cover;
-    height: 100%;
-    left: 0;
-    opacity: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-	z-index: -5;
-}
-@-moz-keyframes overlay {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 0.5;
-	}
-}
-@-webkit-keyframes overlay {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 0.5;
-	}
-}
-@-ms-keyframes overlay {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 0.5;
-	}
-}
-@keyframes overlay {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 0.5;
-	}
-}
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
-header {
-	color: #fff;
-	position: relative;
-	padding: 100px 0 30px 0;
-}
-.header-content {
-	text-align: center;
-}
-.header-content h1 {
-	font-weight: 900;
-	font-size: 8em;
-	letter-spacing: 2px;
-	text-shadow: 0 0 10px rgba(0, 0, 0, 0.5), 2px 2px 0 rgba(0, 0, 0, 0.7);
-}
-.header-content p {
-	font-size: 1.7em;
-	font-weight: 300;
-	letter-spacing: 2px;
-}
-/*--------------------------------------------------------------
-# App Grid
---------------------------------------------------------------*/
-
-.app-icon-img {border-radius:20px!important;}
-
-.app-item {
-	position: relative;
-}
-.app-link-wrapper {
-	position: relative;
-	top: -40px;
-}
-.app-link-wrapper img {
-	display: table;
-	margin: 0 auto;
-}
-.app-link-wrapper a {
-	background: #fff;
-	display: table;
-	margin: 0 auto;
-	padding: 20px 35px 20px 55px;
-	color: #000;
-	border-radius: 10px;
-	text-transform: uppercase;
-	font-weight: 700;
-	letter-spacing: 2px;
-	box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
-	text-decoration: none !important;
-	border: 2px solid #eee;
-	position: relative;
-}
-.app-link-wrapper a:hover {
-	background: #8400ff;
-	color: #fff;
-}
-.app-link-wrapper a span.lnr {
-	position: absolute;
-	left: 17px;
-	top: 20px;
-	font-size: 1.4em;
-	color: #8400ff;
-	-webkit-transition: all 0.2s ease-in-out 0s;
-	-moz-transition: all 0.2s ease-in-out 0s;
-	-ms-transition: all 0.2s ease-in-out 0s;
-	-o-transition: all 0.2s ease-in-out 0s;
-	transition: all 0.2s ease-in-out 0s;
-}
-.app-link-wrapper a:hover span.lnr {
-	color: #fff;
-}
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
-footer {
-	margin-top: 120px;
-	text-align: center;
-	padding: 5px 0;
-	color: rgba(255, 255, 255, 0.5);
-	font-size: 1em;
-	position: relative;
-	z-index: 10;
-}
-
-
-/*--------------------------------------------------------------
-# Responsive Design
---------------------------------------------------------------*/
-@media screen and (max-width: 1920px) {
-	.header-content h1 {
-		font-size: 7em;
-	}
-	.header-content p {
-		font-size: 1.6em;
-	}
-	.container {
-		max-width: 800px;
-	}
-	.app-link-wrapper a {
-		padding: 15px 25px 15px 45px;
-		letter-spacing: 1px;
-	}
-	.app-link-wrapper a span.lnr {
-		top: 15px;
-	}
-}
-@media screen and (max-width: 767px) {
-	.header-content h1 {
-		font-size: 5em;
-	}
-	.header-content p {
-		font-size: 1.2em;
-	}	
-	.app-link-wrapper {
-		top: -15px;
-	}
-	.app-link-wrapper a {
-		padding: 12px 15px 10px 35px;
-		letter-spacing: 0;
-	}
-	.app-link-wrapper a span.lnr {
-		font-size: 1em;
-		left: 12px;
-	}
-}
-@media screen and (max-width: 500px) {
-	.header-content, .footer-content {
-		padding: 0 25px;
-	}
-	header {
-		padding-top: 50px;
-	}
-	.header-content h1 {
-		font-size: 3.2em;
-	}
-	.app-link-wrapper {
-		top: -15px;
-	}
-	.app-item img {
-		max-width: 70%;
-		display: table;
-		margin: 0 auto;
-	}
-	.app-section-content {
-		padding: 0 25px;
-	}
-	.app-link-wrapper a {
-		padding: 10px 10px 8px 35px;
-		letter-spacing: 0;
-		font-size: 0.7em;
-	}
-	.app-link-wrapper a span.lnr {
-		font-size: 1em;
-		left: 17px;
-	}
-	#videoBg {
-		right: none;
-		left: -55% !important;
-	}
-}
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");html,body{font-family:'Lato', sans-serif;font-size:14px;padding:0;margin:0;color:#000000}a:hover{text-decoration:none}img{max-width:100%}.containerr{max-width:1365px}#header .container{background:linear-gradient(90deg, #231f20, #231f20 48%, #de2c2c 70%, #d40511);padding:20px 40px}#header .top-header{display:flex}#header .top-header .logo{flex-grow:1}#header .top-header .logo img{width:173px}#header .top-header ul{padding:0;margin:0;display:block}@media (max-width: 767px){#header .top-header ul{display:none}}#header .top-header ul li{display:inline-block;list-style-type:none;margin-right:20px}#header .top-header ul li:last-child{margin-right:0}#header .top-header ul.mobile-menu{display:none}@media (max-width: 767px){#header .top-header ul.mobile-menu{display:block}}#header .top-header ul.mobile-menu li{color:#D40511;font-size:20px}@media (max-width: 767px){#header .bottom-header{display:none !important}}#header .bottom-header ul{padding:0;margin:0}#header .bottom-header ul li{display:inline-block;list-style-type:none;margin-right:20px;font-weight:900;font-size:13px}#header .bottom-header ul li:last-child{margin-right:0}#main{margin:50px 0}#main .main-title h3{color:#181919;font-size:48px;font-weight:300;text-align:center;margin-bottom:20px}@media (max-width: 767px){#main .main-title h3{font-size:36px}}#main .details{background:#FFF;border:50px solid #F1F1F1;padding:40px}@media (max-width: 767px){#main .details{border-width:10px;padding:10px}}#main .details .title h3{color:#2ecc71;font-size:36px;font-weight:900;margin-bottom:0}#main .details .title h3 svg{color:#bdc3c7;margin-right:10px}@media (max-width: 767px){#main .details .title h3{font-size:22px}}#main .details .title p{font-size:13px;margin-bottom:0}#main .details .title p b{font-weight:700}#main .details .title ul{display:flex;padding:0;margin:0;margin-bottom:30px;margin-top:10px}#main .details .title ul li{width:25%;height:7px;background:#bdc3c7;margin-right:15px;list-style-type:none}#main .details .title ul li:last-child{margin-right:0}#main .details .title ul li.active{background:#2ecc71}#main .details .title ul li.inactive{background:#d40511}#main .details .message h3{font-size:20px;font-weight:700;color:#d40511;margin-bottom:10px}@media (max-width: 767px){#main .details .message h3{font-size:18px}}#main .details .message a{display:inline-block;border:1px solid #d40511;color:#d40511;padding:10px 20px;font-weight:700;border-radius:5px;transition:all 0.3s}#main .details .message a svg{margin-left:5px;font-size:12px}#main .details .message a:focus{outline:0;box-shadow:none}#main .details .message a:hover{background:#d40511;color:#FFF}#main .details form{background:#F1F1F1;padding:20px}#main .details form .has-error input{border-color:#D40511 !important}#main .details form .has-error .error-message{color:#D40511;font-size:12px}#main .details form label{font-size:15px;color:#191919;font-weight:700}#main .details form input{height:55px;background:#fff;border:1px solid #b5b5b5;border-radius:5px;font-size:15px}#main .details form input:focus{outline:0;box-shadow:none;border:1px solid #000}#main .details form .btns{text-align:right}#main .details form .btns button{display:inline-block;border:1px solid #d40511;color:#FFF;padding:10px 20px;font-weight:700;border-radius:5px;transition:all 0.3s;background:#d40511}#main .details form .btns button svg{margin-left:5px;font-size:12px}#main .details form .btns button:focus{outline:0;box-shadow:none}#main .details form .btns button:hover{background:#b30711}#footer .top-footer{border-top:1px solid #E8E8E8;padding-top:50px;padding-bottom:30px}#footer .top-footer .widget h3{color:#191919;font-weight:900;font-size:18px;margin-bottom:20px}#footer .top-footer .widget ul{padding:0;margin:0}#footer .top-footer .widget ul li{list-style-type:none;color:#757575;margin-bottom:20px;font-size:16px}#footer .top-footer .widget ul li:last-child{margin-bottom:0}#footer .bottom-footer{background:#F1F1F1;padding:30px 40px}#footer .bottom-footer ul.footer-list{padding:0;margin:0}#footer .bottom-footer ul.footer-list li{display:inline-block;list-style-type:none;color:#757575;margin-right:20px;font-size:15px;margin-bottom:20px}#footer .bottom-footer ul.footer-list li:last-child{margin-right:0}#footer .bottom-footer h3{color:#191919;font-size:14px;font-weight:900;margin-bottom:20px}#footer .bottom-footer ul.social{padding:0;margin:0}#footer .bottom-footer ul.social li{display:inline-block;list-style-type:none;color:#666;margin-right:20px;font-size:18px;margin-bottom:10px}#footer .bottom-footer ul.social li:last-child{margin-right:0}#footer .bottom-footer p{text-align:center;font-size:15px;color:#757575;margin-bottom:0;margin-top:20px}#ss-wrapper{padding:20px}#ss-wrapper .ss-area{max-width:460px;background:#FFF;border:1px solid #bfbfbf;margin:0 auto;border-top:17px solid #ffcc00}#ss-wrapper .ss-area .top{padding:20px}#ss-wrapper .ss-area h3{font-weight:700;font-size:16px;color:#191919;margin:0;padding:10px 20px;text-align:center;border-top:1px solid #bfbfbf}#ss-wrapper .ss-area .details{background:#eaeaea;padding:20px}#ss-wrapper .ss-area .details p{font-size:12px;color:#666}#ss-wrapper .ss-area .details table{width:100%}#ss-wrapper .ss-area .details table tr td{padding:5px 0;font-size:13px}#ss-wrapper .ss-area .details table tr td:first-child{font-weight:700;color:#333}#ss-wrapper .ss-area .details table tr td:last-child{font-weight:400;color:#666}#ss-wrapper .ss-area .details table tr td input{height:30px;border:1px solid #d4d4d4;border-radius:30px;padding:0 10px;font-size:13px}#ss-wrapper .ss-area .details table tr td input.has-error{border-color:#D40511 !important}#ss-wrapper .ss-area .details table tr td input:focus{outline:0;box-shadow:none}#ss-wrapper .ss-area .btns{text-align:right;padding:10px 20px}#ss-wrapper .ss-area .btns button{display:inline-block;border:1px solid #d40511;color:#FFF;padding:7px 20px;font-weight:700;border-radius:5px;transition:all 0.3s;background:#d40511;font-size:16px}#ss-wrapper .ss-area .btns button svg{margin-left:5px;font-size:12px}#ss-wrapper .ss-area .btns button:focus{outline:0;box-shadow:none}#ss-wrapper .ss-area .btns button:hover{background:#b30711}#ss-wrapper .ss-area p.copy{text-align:center;background:#eaeaea;padding:10px 20px;margin-bottom:0;color:#333;font-size:13px}.loader .spinner-border{height:40px;width:40px}
